added weather forecast

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                         <input type="search" class="form-control col-12 mr-2" placeholder="search" id="searchName">
                         <button type="submit" class="btn btn-primary col-12 mt-2">Search</button>
                     </form>
-                    <ul class="list-group mt-2 bg-light" id="pastSearch"></ul>
+                    <ul class="list-group mt-2 bg-secondary" id="city-list"></ul>
+                    <!-- <button class="btn btn-primary col-12 mt-2" id="pastSearch"></button> -->
                 </div>
             </div>
             <div class="col-8">
@@ -37,7 +38,7 @@
                 <section id="forcast" class="mt-2 mb-2">
                     <h3>5-Day Forecast:</h3>
                     
-                    <div class="card-deck"></div>
+                    <div class="card-deck" id="cards"></div>
                   </section>
             </div>
         </div>
