added local storage to save past searches

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                         <input type="search" class="form-control col-12 mr-2" placeholder="search" id="searchName">
                         <button type="submit" class="btn btn-primary col-12 mt-2">Search</button>
                     </form>
-                    <ul class="list-group mt-2 bg-secondary" id="city-list"></ul>
+                    <div class="list-group mt-2 bg-light" id="pastSearch"> Past Searches
+                        <div id="city-list"></div>
+                    </div>
                     <!-- <button class="btn btn-primary col-12 mt-2" id="pastSearch"></button> -->
                 </div>
             </div>
